Bug 39333 - Data Ranges created in prior LibO versions are not recognized in LibO 3.4.2RC1
Summary: Data Ranges created in prior LibO versions are not recognized in LibO 3.4.2RC1
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.5 target:3.4.3
Keywords:
: 40019 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-18 06:25 UTC by Nikos
Modified: 2011-12-23 14:17 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet created in LibO3.3.2 (10.21 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-07-18 06:25 UTC, Nikos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nikos 2011-07-18 06:25:47 UTC
Created attachment 49248 [details]
Spreadsheet created in LibO3.3.2

Data ranges created in prior versions of LibreOffice (by Data--> define range)show up in the navigator as Database ranges.
However, when they are used in formulas (e.g.> Vlookup) they seem to be not recognized and return #Name?.

The attached document was created in LibO 3.3.3 and contains a datarange (A_testrange). Cell E3 contains =VLOOKUP(D3;A_testrange;2;0) and returns 14 when saved in LibO 3.3.3 but contains =VLOOKUP(D3;#NAME?;2;0) when opened in LibO3.4.2
Comment 1 noname 2011-07-18 11:11:05 UTC
Confirmed with [Win2K LibreOffice 3.4.2 OOO340m1 (Build:201)]
Comment 2 Markus Mohrhard 2011-07-18 20:01:36 UTC
I'll have a look at it
Comment 3 Markus Mohrhard 2011-07-18 21:37:08 UTC
It seems it is a bug in our formula api. We have some other bug reports regarding database ranges in formulas already.

I hope I will have time to fix this for 3.4.3
Comment 4 Markus Mohrhard 2011-07-19 05:29:29 UTC
fixed already, should be in 3.4.3 and 3.5
Comment 5 Nikos 2011-07-20 04:55:49 UTC
(In reply to comment #4)
> fixed already, should be in 3.4.3 and 3.5

Can't wait to see it. Looking forward to put 3.4.3 in production use in August-September.
Thank you!
Comment 6 Markus Mohrhard 2011-08-12 09:09:48 UTC
*** Bug 40019 has been marked as a duplicate of this bug. ***