fix for fdo#39333: database ranges don't work in formulas